Display different colors based on tours availability when rendering Calendar

--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -222,9 +222,9 @@ main {
 }
 
 .calendar .body .joinable {
-
+  background: yellow;  
 }
 
 .calendar .body .unavailable {
-
+  background: red;  
 }
