--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -180,7 +180,7 @@ main {
 }
 
 .calendar .body .selected {
-  color: var(--text-color-light);
+  color: #326273;
 }
 
 .calendar .body .row {
@@ -196,9 +196,12 @@ main {
 }
 
 .calendar .body .cell .number {
-  font-size: 90%;
-  line-height: 1;
+  color: #eee;
   font-weight: 700;
+  width: 2rem;
+  height: 2rem;
+  text-align: center;
+  border-radius: 50%;
 }
 
 .calendar .body .disabled {
@@ -219,16 +222,13 @@ main {
 }
 
 .calendar .body .available .number {
-  background: green;
-  border-radius: 50%;
+  background: #84A34C;
 }
 
 .calendar .body .joinable .number {
-  background: yellow;
-  border-radius: 50%;
+  background: #F4D35E;
 }
 
 .calendar .body .unavailable .number {
-  background: red;
-  border-radius: 50%;
+  background: #E39774;
 }
