--- a/src/components/Slideshow.scss
+++ b/src/components/Slideshow.scss
@@ -1,22 +1,37 @@
 .slideshow {
   overflow-x: hidden;
-  height: 20vh;;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  .positive {
+    margin-left: 4rem;
+  }
 }
 
 .card {
   display: flex;
   flex-direction: column;
   border-radius: 50%;
+  height: 12rem;
+  width: 12rem;
+  $border: 2px;
+  background-clip: padding-box; /* !importanté */
+  border: solid $border transparent; /* !importanté */
+  
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    z-index: -1;
+    margin: -$border; /* !importanté */
+    border-radius: inherit; /* !importanté */
+    background: linear-gradient(to right, red, orange);
+  } 
 }
 
 .image {
-max-width: 100%;
-}
-
-.details {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  max-width: 100%;
 }
 
 .cards-slider-wrapper {
@@ -26,7 +41,7 @@ max-width: 100%;
   .card {
     flex: 1;
     min-width: 50px;
-    transform: scale(0.95);
+    transform: scale(1);
     transition: opacity 300ms linear, transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
   }
 }
@@ -42,34 +57,4 @@ $i: 0;
 .cards-slider {
   position: relative;
   max-width: 226px;
-  margin: 2rem auto;
-
-  // &:after {
-  //   content: '';
-  //   display: block;
-  //   border-radius: 50%;
-  //   width: 100%;
-  //   height: 264px;
-  //   outline: 5px solid black;
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  // }
-}
-
-.card {
-
-  $border: 2px;
-  background-clip: padding-box; /* !importanté */
-  border: solid $border transparent; /* !importanté */
-  
-  &:before {
-    content: '';
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    z-index: -1;
-    margin: -$border; /* !importanté */
-    border-radius: inherit; /* !importanté */
-    background: linear-gradient(to right, red, orange);
-  } 
 }
