--- a/src/components/Slideshow.scss
+++ b/src/components/Slideshow.scss
@@ -16,11 +16,11 @@
   border-radius: 50%;
   height: 12rem;
   width: 12rem;
-  margin-right: 1rem;
+  margin-right: 0.5rem;
   $border: 2px;
   background-clip: padding-box; /* !importanté */
   border: solid $border transparent; /* !importanté */
-  
+
   &:before {
     content: '';
     position: absolute;
@@ -28,12 +28,8 @@
     z-index: -1;
     margin: -$border; /* !importanté */
     border-radius: inherit; /* !importanté */
-    background: linear-gradient(to right, red, orange);
+    background: linear-gradient(to right, orange, yellow);
   } 
-}
-
-.image {
-  max-width: 100%;
 }
 
 .cards-slider {
@@ -49,8 +45,11 @@
   .card {
     flex: 1;
     min-width: 50px;
-    transform: scale(1);
+    transform: scale(0.96);
     transition: opacity 300ms linear, transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  }
+  .card-selected {
+    transform: scale(0.90);
   }
 }
 
@@ -58,7 +57,6 @@ $i: 0;
 @for $i from 0 through 5 {
   .cards-slider.active-slide-#{$i} #card-#{$i} {
     opacity: 1;
-    transform: scale(1);
   }
 }
 
