--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,4 @@
-.hero{
+.hero {
   width: 100vw;
   height: 100vh;
   max-height: 800px;
@@ -11,7 +11,7 @@
   align-items: center;
 }
 
-.title{
+.title {
   text-align: center;
   font-size: 4rem;
   color: white;
@@ -19,7 +19,7 @@
   text-shadow: 2px 0.5px 9px black;
 }
 
-.contact{
+.contact {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -29,7 +29,7 @@
   padding: 10px;
 }
 
-.contact div{
+.contact div {
   width: 50%;
   display: flex;
   flex-direction: row;
@@ -38,4 +38,6 @@
   background-color: white;
 }
 
-
+.ui.primary.button {
+  background-color: #F2994A;
+}
