Refactor Slideshow CSS and action buttons

--- a/src/pages/Booking.scss
+++ b/src/pages/Booking.scss
@@ -25,15 +25,14 @@
   }
 }
 
-.buttons {
-  height: 3.5rem;
-}
-
-.ui.positive.button {
+.ui.button {
   background-color: #F2994A;
+  color: #eee;
 }
 
-.ui.fluid.positive.button {
+.ui.fluid.button {
+  background-color: #F2994A;
+  color: #eee;
   margin-bottom: 2rem;
 }
 
