--- a/src/components/Slideshow.scss
+++ b/src/components/Slideshow.scss
@@ -1,13 +1,21 @@
 .slideshow {
   overflow-x: hidden;
-  height: 26vh;
+  height: 23vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding-top: 1rem;
   .positive {
     margin-left: 4rem;
     margin-bottom: 2rem;
+  }
+}
+
+.slide-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  p {
+    margin-bottom: 0;
   }
 }
 
@@ -27,6 +35,7 @@
   position: relative;
   max-width: 226px;
   height: 100%;
+  // margin-bottom: 6rem;
 }
 
 .slider-wrapper {
@@ -68,6 +77,5 @@ $i: 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: 0.5rem;
 }
 
