--- a/src/pages/Cart.css
+++ b/src/pages/Cart.css
@@ -50,7 +50,7 @@
 }
 
 .StripeElement{
-  padding: 7px;
-  border: 1px black solid;
-  background-color: gainsboro;
+  padding: 15px 10px 15px 10px;
+  border:1px solid rgba(34,36,38,.1);
+  border-radius: 5px;
 }
